[gd_scene load_steps=10 format=3 uid="uid://3tuxnqf0v3dh"]

[ext_resource type="Script" uid="uid://jraslb56h46o" path="res://scenes/ui/level_up_popup/level_up_popup.gd" id="1_tllgq"]
[ext_resource type="PackedScene" uid="uid://bkr80g22y78fw" path="res://scenes/ui/level_up_popup/level_up_card.tscn" id="3_t6wr6"]
[ext_resource type="StyleBox" uid="uid://8wu4ix1hxhyb" path="res://scenes/ui/level_up_popup/res/button_style/ui_button/ui_button_normal.tres" id="4_ur6ma"]
[ext_resource type="StyleBox" uid="uid://cirhmqhrns8gi" path="res://scenes/ui/level_up_popup/res/button_style/ui_button/ui_button_pressed.tres" id="5_j5dja"]
[ext_resource type="StyleBox" uid="uid://dac2yrv417xnt" path="res://scenes/ui/level_up_popup/res/button_style/ui_button/ui_button_hover.tres" id="6_x17t1"]
[ext_resource type="AudioStream" uid="uid://bpm0xynrik268" path="res://scenes/ui/level_up_popup/asset/sfx/pop-402323.mp3" id="7_ur6ma"]
[ext_resource type="AudioStream" uid="uid://8kbc14aqbptn" path="res://scenes/ui/level_up_popup/asset/sfx/523763__lilmati__select-granted-06.wav" id="8_j5dja"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_isxfx"]
bg_color = Color(0.06879826, 0.06879829, 0.06879823, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="LabelSettings" id="LabelSettings_qnpbd"]
font_size = 64

[node name="level_up_popup" type="CanvasLayer" node_paths=PackedStringArray("panel", "card_container", "button_container", "button_reroll", "button_ok", "sound_pop", "sound_ok")]
process_mode = 3
script = ExtResource("1_tllgq")
card_prefab = ExtResource("3_t6wr6")
panel = NodePath("margin_container/level_up_panel")
card_container = NodePath("margin_container/level_up_panel/margin_container/v_box_container/hb_card_container")
button_container = NodePath("margin_container/level_up_panel/margin_container/v_box_container/hb_button_container")
button_reroll = NodePath("margin_container/level_up_panel/margin_container/v_box_container/hb_button_container/button_reroll")
button_ok = NodePath("margin_container/level_up_panel/margin_container/v_box_container/hb_button_container/button_ok")
sound_pop = NodePath("audio_stream_player_pop")
sound_ok = NodePath("audio_stream_player_ok")

[node name="dark_background" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="margin_container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="level_up_panel" type="Panel" parent="margin_container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_isxfx")

[node name="margin_container" type="MarginContainer" parent="margin_container/level_up_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="v_box_container" type="VBoxContainer" parent="margin_container/level_up_panel/margin_container"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="label_title" type="Label" parent="margin_container/level_up_panel/margin_container/v_box_container"]
layout_mode = 2
text = "Level Up!"
label_settings = SubResource("LabelSettings_qnpbd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="hb_card_container" type="HBoxContainer" parent="margin_container/level_up_panel/margin_container/v_box_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 60
alignment = 1

[node name="level_up_card" parent="margin_container/level_up_panel/margin_container/v_box_container/hb_card_container" instance=ExtResource("3_t6wr6")]
layout_mode = 2

[node name="hb_button_container" type="HBoxContainer" parent="margin_container/level_up_panel/margin_container/v_box_container"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 2

[node name="button_reroll" type="Button" parent="margin_container/level_up_panel/margin_container/v_box_container/hb_button_container"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("4_ur6ma")
theme_override_styles/pressed = ExtResource("5_j5dja")
theme_override_styles/hover = ExtResource("6_x17t1")
text = "Reroll"

[node name="button_ok" type="Button" parent="margin_container/level_up_panel/margin_container/v_box_container/hb_button_container"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("4_ur6ma")
theme_override_styles/pressed = ExtResource("5_j5dja")
theme_override_styles/hover = ExtResource("6_x17t1")
text = "OK"

[node name="audio_stream_player_pop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ur6ma")

[node name="audio_stream_player_ok" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_j5dja")
